# hello-wl-egl

./: meson.build
include/: egl_common.h  gl_render.h
src/: egl_common.c  gl_render.c  main.c
